# PitStopTimingParsing

./: .gitignore  Dockerfile  README-legacy.md  README.md  comparison.md  docker-compose.yml  karting.bat  pyproject.toml  pytest.ini
backend/: .env.example  requirements.txt
backend/api/: filters.py  serializers.py  urls.py  views.py
backend/api/tests/: __init__.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  models.py
backend/core/migrations/: 0001_initial.py  0002_alter_heatparticipation_options_and_more.py
backend/core/tests/: test_models.py
backend/parser/: __init__.py  apps.py  exceptions.py  utils.py
backend/parser/management/commands/: parse_track.py
backend/parser/tests/: test_parser.py
cli/: pytest.ini  requirements.txt
cli/karting/: __init__.py  __main__.py  client.py  config.py  exceptions.py  utils.py
cli/karting/commands/: __init__.py  ai.py  drivers.py  export.py  heats.py  results.py  stats.py  tracks.py
cli/karting/formatters/: __init__.py  cards.py  tables.py
cli/karting/prompts/: heat_analysis.py
cli/tests/: conftest.py  test_client.py  test_config.py
cli/tests/test_commands/: test_ai.py  test_drivers.py  test_export.py  test_heats.py  test_results.py  test_stats.py  test_tracks.py
docs/deepseek/: README.md
docs/qwen/: README.md
gpt/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
gpt/cli/: Dockerfile  cli.py  requirements.txt
gpt/cli/karting_cli/: __init__.py  api_client.py  config.py  formatters.py  main.py
gpt/cli/karting_cli/commands/: __init__.py  drivers.py  export.py  heats.py  karts.py  parser.py  stats.py  (+1 more)
gpt/cli/tests/: __init__.py  conftest.py  test_commands_basic.py  test_config_and_export.py  test_drivers.py  test_export.py  test_heats.py  test_karts.py  test_stats.py  test_tracks.py
gpt/core/: settings.py  urls.py
gpt/parser/: exceptions.py
gpt/parser/tests/: test_parser.py
gpt/timing/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
gpt/timing/migrations/: 0001_initial.py
qwen/: .gitignore  Dockerfile  README.md  docker-compose.yml
qwen/backend/: .env.example  Makefile  requirements.txt
qwen/backend/api/: filters.py  views.py
qwen/backend/config/: settings.py  wsgi.py
qwen/cli/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
qwen/cli/karting/: __main__.py  client.py  config.py  exceptions.py  main.py
qwen/cli/karting/commands/: __init__.py  ai.py  drivers.py  export.py  heats.py  results.py  stats.py  tracks.py
qwen/cli/karting/formatters/: __init__.py  cards.py  tables.py
qwen/cli/tests/: conftest.py  test_config.py  test_utils.py
qwen/cli/tests/test_commands/: test_ai.py  test_drivers.py  test_export.py  test_heats.py  test_results.py  test_stats.py  test_tracks.py
tests/: test_repo.py
(+5 files in other folders)
